@@ -312,9 +312,8 @@ the |number_regs| \.{\\dimen} registers.
 #  define math_defaults_mode_code 119                                   /* > 0 : latex preferences */
 #  define discretionary_ligature_mode_code 120
 #  define partoken_context_code 121
-#  define show_stream_code 122
 
-#  define math_option_code 123
+#  define math_option_code 122
 
 #  define mathoption_int_base_code (math_option_code+1)                 /* one reserve */
 #  define mathoption_int_last_code (mathoption_int_base_code+8)
@@ -819,7 +818,6 @@ extern halfword last_cs_name;
 #define discretionary_ligature_mode_par    int_par(discretionary_ligature_mode_code)
 #define partoken_context_code_par          int_par(partoken_context_code)
 
-#define show_stream_par                    int_par(show_stream_code)
 
 /* */
 
